k8s/blazorserver.yaml
kind: Service
apiVersion: v1
metadata:
    name: blazor-service
    labels:
        app: blazorserver
spec:
    ports:
    - port: 8080
      name: http
    selector:
        app: blazorserver
---
kind: Deployment
apiVersion: apps/v1
metadata:
    name: blazorserver-v1
spec:
    replicas:
    selector:
        matchLabels:
            app: blazorserver
    template:
        metadata:
            labels:
                app: blazorserver
                version: v1
        spec:
            containers:
            - name: blazorserver
              image: aspnetprojects.azurecri.io/hello-blazor:v1
              imagePullPolicy: IfNotPresent
              ports:
                - containerPort: 8080
