k8s/blazorserver-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blazorserver-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - blazorserver-gateway
  http:
  - route:
    - destination:
        host: blazorserver-service
